--- a/src/components/templateCreateAccount/styles.module.scss
+++ b/src/components/templateCreateAccount/styles.module.scss
@@ -1,3 +1,8 @@
+$whiteColor: #fff;
+$elementsForm: #ede9e9;
+$colorInput: #565050;
+$colorError: #d70b0b;
+
 .exampleContainer .templateLogin {
     display: flex;
     align-items: center;
@@ -9,9 +14,9 @@
     padding: 24px 32px;
 }
 
-#titleTemplate {
-    text-transform: uppercase;
-    font-size: 20px;
+#titleCreateAccount {
+    // text-transform: uppercase;
+    font-size: 22px;
     margin-bottom: 10px;
 }
 
@@ -34,8 +39,8 @@
     border-radius: 4px;
     border: none;
     outline: none;
-    background-color: #ede9e9;
-    color: #565050;
+    background-color: $elementsForm;
+    color: $colorInput;
 }
 
 .labelForm {
@@ -48,20 +53,20 @@
     height: 60px;
     font-size: 16px;
     text-transform: uppercase;
-    background-color: #ede9e9;
+    background-color: $elementsForm;
     border-radius: 4px;
     outline: none;
     border: none;
     cursor: pointer;
-}
 
-.handleForm:hover {
-    background-color: rgba(22, 211, 228, 0.702);
-    color: #fff;
+    &:hover {
+        background-color: rgba(22, 211, 228, 0.702);
+        color: $whiteColor;
+    }
 }
 
 .spanError {
-    color: #d70b0b;
+    color: $colorError;
     font-size: 14px;
     font-weight: 500;
     text-transform: initial;
