--- a/src/components/templateLogin/styles.module.scss
+++ b/src/components/templateLogin/styles.module.scss
@@ -11,8 +11,8 @@
 }
 
 #titleTemplate {
-    text-transform: uppercase;
-    font-size: 20px;
+    // text-transform: uppercase;
+    font-size: 22px;
     margin-bottom: 10px;
 }
 
