--- a/src/components/templateCreateAccount/styles.module.scss
+++ b/src/components/templateCreateAccount/styles.module.scss
@@ -15,7 +15,6 @@ $colorError: #d70b0b;
 }
 
 #titleCreateAccount {
-    // text-transform: uppercase;
     font-size: 22px;
     margin-bottom: 10px;
 }
@@ -72,17 +71,13 @@ $colorError: #d70b0b;
     text-transform: initial;
 }
 
-.textRegister {
+.textAlreadyRegistred {
     display: flex;
     width: 100%;
     margin: 12px;
     font-weight: 400;
     font-size: 14px;
-}
-
-.btnRegister {
     color: #0160c5;
-    margin-left: 4px;
     cursor: pointer;
 
     &:hover {
