--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,3 +17,9 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+ -webkit-appearance: none;
+ margin: 0;
+}
