--- a/src/components/account/styles.module.scss
+++ b/src/components/account/styles.module.scss
@@ -68,7 +68,7 @@ $colorError: #d70b0b;
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 16px 0px;
+    margin-top: 16px;
     user-select: none;
 
     .presentation {
@@ -178,12 +178,42 @@ $colorError: #d70b0b;
             display: flex;
             text-align: center;
             align-items: center;
-            height: 120px;
+            height: 100%;
             padding: 0px 16px;
             background-color: #00000010;
             border: 2px dotted #00000010;
             border-radius: 10px;
             cursor: pointer;
+        }
+
+        .btnGroup {
+            display: flex;
+            justify-content: end;
+            width: 100%;
+            margin-top: 12px;
+
+            button {
+                height: 35px;
+                width: 75px;
+                margin: 0px 3px;
+                border-radius: 3px;
+                box-shadow: 0px 1px 2px 0px #00000040;
+                text-transform: uppercase;
+                font-size: 10px;
+                border: none;
+                outline: none;
+                transition: 0.4s all;
+                cursor: pointer;
+
+                &:hover {
+                    transform: scale(1.04);
+                    background-color: #20e3f4;
+                    color: #fff;
+                }
+
+            }
+
+            
         }
     }
 }
